--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -3,10 +3,10 @@ name: Terraform Workflow
 on:
   push:
     branches:
-      - main
+      - branch2
   pull_request:
     branches:
-      - main
+      - branch2
 
 jobs:
   terraform:
